--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "UWMCoursePlanner",
-  "version": "0.0.0",
-  "main": "server.js",
+  "version": "0.0.1",
+  "scripts": {
+	"start": "node ./bin/www"
+  },
+  "engines": {
+	"node": "~4.6.1",
+	"npm": "~2.15.9"
+  },
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
